src/Compilador/y.output
   0  $accept : programa $end

   1  programa : ID_simple BEGIN sentencias END
   2           | ID_simple BEGIN END
   3           | BEGIN sentencias END
   4           | ID_simple BEGIN sentencias
   5           | ID_simple sentencias END
   6           | ID_simple sentencias

   7  sentencias : sentencias sentencia
   8             | sentencia

   9  sentencia : sentencia_declarativa
  10            | sentencia_ejecutable ';'
  11            | sentencia_ejecutable

  12  sentencia_declarativa : declaracion_variable
  13                        | declaracion_funciones ';'
  14                        | declaracion_subtipo ';'
  15                        | declaracion_funciones
  16                        | declaracion_subtipo

  17  declaracion_variable : tipo variables ';'
  18                       | tipo variables error

  19  tipo : ID_simple
  20       | tipo_primitivo

  21  tipo_primitivo : INTEGER
  22                 | DOUBLE

  23  declaracion_subtipo : TYPEDEF ID_simple ASIGNACION tipo '{' CTE_con_sig ',' CTE_con_sig '}'
  24                      | TYPEDEF ID_simple ASIGNACION tipo CTE_con_sig ',' CTE_con_sig '}'
  25                      | TYPEDEF ID_simple ASIGNACION tipo '{' CTE_con_sig ',' CTE_con_sig
  26                      | TYPEDEF ID_simple ASIGNACION tipo CTE_con_sig ',' CTE_con_sig
  27                      | TYPEDEF TRIPLE '<' tipo '>' ID_simple
  28                      | TYPEDEF ID_simple ASIGNACION tipo '{' ',' CTE_con_sig '}'
  29                      | TYPEDEF ID_simple ASIGNACION tipo '{' CTE_con_sig '}'
  30                      | TYPEDEF ID_simple ASIGNACION tipo '{' CTE_con_sig ',' '}'
  31                      | TYPEDEF ID_simple ASIGNACION tipo '{' '}'
  32                      | TYPEDEF ASIGNACION tipo '{' CTE_con_sig ',' CTE_con_sig '}'
  33                      | TYPEDEF ID_simple ASIGNACION '{' CTE_con_sig ',' CTE_con_sig '}'
  34                      | TYPEDEF '<' tipo '>' ID_simple
  35                      | TYPEDEF TRIPLE tipo '>' ID_simple
  36                      | TYPEDEF TRIPLE '<' tipo ID_simple
  37                      | TYPEDEF TRIPLE tipo ID_simple
  38                      | TYPEDEF TRIPLE '<' tipo '>' error

  39  declaracion_funciones : encabezado_funcion parametros_parentesis BEGIN cuerpo_funcion END

  40  encabezado_funcion : tipo FUN ID
  41                     | tipo FUN

  42  parametros_parentesis : '(' tipo_primitivo ID_simple ')'
  43                        | '(' tipo_primitivo ')'
  44                        | '(' ID_simple ')'
  45                        | '(' ')'
  46                        | '(' error ')'

  47  cuerpo_funcion : sentencias

  48  retorno : RET '(' expresion_arit ')'

  49  sentencia_ejecutable : asignacion
  50                       | sentencia_IF
  51                       | sentencia_WHILE
  52                       | sentencia_goto
  53                       | ETIQUETA
  54                       | outf_rule
  55                       | retorno

  56  outf_rule : OUTF '(' expresion_arit ')'
  57            | OUTF '(' ')'
  58            | OUTF '(' cadena ')'
  59            | OUTF '(' sentencias ')'

  60  asignacion : variable_simple ASIGNACION expresion_arit
  61             | variable_simple '{' CTE '}' ASIGNACION expresion_arit

  62  invocacion : ID_simple '(' expresion_arit ')'
  63             | ID_simple '(' tipo_primitivo '(' expresion_arit ')' ')'
  64             | ID_simple '(' ')'
  65             | ID_simple '(' error ')'

  66  list_expre : list_expre ',' expresion_arit
  67             | expresion_arit

  68  expresion_arit : expresion_arit '+' termino
  69                 | expresion_arit '-' termino
  70                 | termino
  71                 | error '+' error
  72                 | error '-' error
  73                 | expresion_arit '+' error
  74                 | expresion_arit '-' error
  75                 | error termino

  76  termino : termino '*' factor
  77          | termino '/' factor
  78          | factor
  79          | error '*' error
  80          | error '/' error
  81          | termino '*' error
  82          | termino '/' error

  83  factor : variable_simple
  84         | CTE_con_sig
  85         | invocacion
  86         | variable_simple '{' CTE '}'

  87  variables : variables ',' variable_simple
  88            | variables variable_simple
  89            | variable_simple

  90  variable_simple : ID_simple

  91  ID_simple : ID

  92  CTE_con_sig : CTE
  93              | '-' CTE
  94              | ERROR
  95              | '-' ERROR

  96  sentencia_IF : IF condicion THEN bloque_unidad ';' bloque_else ';' END_IF
  97               | IF condicion THEN bloque_unidad ';' END_IF
  98               | IF condicion THEN bloque_else ';' END_IF
  99               | IF condicion THEN END_IF
 100               | IF condicion THEN bloque_unidad ';' ELSE END_IF
 101               | IF condicion THEN bloque_unidad bloque_else ';' END_IF
 102               | IF condicion THEN bloque_unidad END_IF
 103               | IF condicion THEN bloque_unidad ';' bloque_else END_IF
 104               | IF condicion THEN bloque_unidad bloque_else END_IF
 105               | IF condicion THEN bloque_unidad ';' error
 106               | IF condicion THEN bloque_unidad ';' bloque_else ';' error

 107  condicion : '(' '(' list_expre ')' comparador '(' list_expre ')' ')'
 108            | '(' list_expre ')' comparador '(' list_expre ')' ')'
 109            | '(' '(' list_expre ')' comparador '(' list_expre ')'
 110            | '(' list_expre ')' comparador '(' list_expre ')'
 111            | '(' expresion_arit comparador expresion_arit ')'
 112            | expresion_arit comparador expresion_arit ')'
 113            | '(' expresion_arit comparador expresion_arit
 114            | expresion_arit comparador expresion_arit
 115            | '(' '(' list_expre ')' '(' list_expre ')' ')'
 116            | '(' error ')'
 117            | '(' '(' list_expre comparador '(' list_expre ')' ')'
 118            | '(' '(' list_expre ')' comparador list_expre ')' ')'

 119  comparador : '>'
 120             | MAYORIGUAL
 121             | '<'
 122             | MENORIGUAL
 123             | '='
 124             | DISTINTO

 125  bloque_else : bloque_else_simple
 126              | bloque_else_multiple

 127  bloque_else_multiple : ELSE BEGIN bloque_sent_ejecutables ';' END
 128                       | ELSE BEGIN bloque_sent_ejecutables END

 129  bloque_else_simple : ELSE bloque_sentencia_simple

 130  bloque_unidad : bloque_unidad_simple
 131                | bloque_unidad_multiple

 132  bloque_unidad_multiple : BEGIN bloque_sent_ejecutables ';' END
 133                         | BEGIN END
 134                         | BEGIN bloque_sent_ejecutables END

 135  bloque_unidad_simple : bloque_sentencia_simple

 136  bloque_sent_ejecutables : bloque_sent_ejecutables ';' bloque_sentencia_simple
 137                          | bloque_sentencia_simple
 138                          | bloque_sent_ejecutables bloque_sentencia_simple

 139  bloque_sentencia_simple : sentencia_ejecutable

 140  cadena : CADENAMULTILINEA

 141  sentencia_WHILE : WHILE condicion bloque_unidad
 142                  | WHILE condicion error

 143  sentencia_goto : GOTO ETIQUETA
 144                 | GOTO error

state 0
	$accept : . programa $end  (0)

	BEGIN  shift 1
	ID  shift 2
	.  error

	programa  goto 3
	ID_simple  goto 4


state 1
	programa : BEGIN . sentencias END  (3)

	IF  shift 5
	OUTF  shift 6
	TYPEDEF  shift 7
	RET  shift 8
	ID  shift 2
	WHILE  shift 9
	GOTO  shift 10
	ETIQUETA  shift 11
	INTEGER  shift 12
	DOUBLE  shift 13
	.  error

	ID_simple  goto 14
	sentencias  goto 15
	sentencia  goto 16
	sentencia_declarativa  goto 17
	sentencia_ejecutable  goto 18
	declaracion_variable  goto 19
	declaracion_funciones  goto 20
	declaracion_subtipo  goto 21
	tipo  goto 22
	tipo_primitivo  goto 23
	encabezado_funcion  goto 24
	retorno  goto 25
	asignacion  goto 26
	sentencia_IF  goto 27
	sentencia_WHILE  goto 28
	sentencia_goto  goto 29
	outf_rule  goto 30
	variable_simple  goto 31


state 2
	ID_simple : ID .  (91)

	.  reduce 91


state 3
	$accept : programa . $end  (0)

	$end  accept


state 4
	programa : ID_simple . BEGIN sentencias END  (1)
	programa : ID_simple . BEGIN END  (2)
	programa : ID_simple . BEGIN sentencias  (4)
	programa : ID_simple . sentencias END  (5)
	programa : ID_simple . sentencias  (6)

	IF  shift 5
	BEGIN  shift 32
	OUTF  shift 6
	TYPEDEF  shift 7
	RET  shift 8
	ID  shift 2
	WHILE  shift 9
	GOTO  shift 10
	ETIQUETA  shift 11
	INTEGER  shift 12
	DOUBLE  shift 13
	.  error

	ID_simple  goto 14
	sentencias  goto 33
	sentencia  goto 16
	sentencia_declarativa  goto 17
	sentencia_ejecutable  goto 18
	declaracion_variable  goto 19
	declaracion_funciones  goto 20
	declaracion_subtipo  goto 21
	tipo  goto 22
	tipo_primitivo  goto 23
	encabezado_funcion  goto 24
	retorno  goto 25
	asignacion  goto 26
	sentencia_IF  goto 27
	sentencia_WHILE  goto 28
	sentencia_goto  goto 29
	outf_rule  goto 30
	variable_simple  goto 31


state 5
	sentencia_IF : IF . condicion THEN bloque_unidad ';' bloque_else ';' END_IF  (96)
	sentencia_IF : IF . condicion THEN bloque_unidad ';' END_IF  (97)
	sentencia_IF : IF . condicion THEN bloque_else ';' END_IF  (98)
	sentencia_IF : IF . condicion THEN END_IF  (99)
	sentencia_IF : IF . condicion THEN bloque_unidad ';' ELSE END_IF  (100)
	sentencia_IF : IF . condicion THEN bloque_unidad bloque_else ';' END_IF  (101)
	sentencia_IF : IF . condicion THEN bloque_unidad END_IF  (102)
	sentencia_IF : IF . condicion THEN bloque_unidad ';' bloque_else END_IF  (103)
	sentencia_IF : IF . condicion THEN bloque_unidad bloque_else END_IF  (104)
	sentencia_IF : IF . condicion THEN bloque_unidad ';' error  (105)
	sentencia_IF : IF . condicion THEN bloque_unidad ';' bloque_else ';' error  (106)

	error  shift 34
	CTE  shift 35
	ID  shift 2
	ERROR  shift 36
	'('  shift 37
	'-'  shift 38
	.  error

	ID_simple  goto 39
	CTE_con_sig  goto 40
	expresion_arit  goto 41
	variable_simple  goto 42
	invocacion  goto 43
	termino  goto 44
	factor  goto 45
	condicion  goto 46


state 6
	outf_rule : OUTF . '(' expresion_arit ')'  (56)
	outf_rule : OUTF . '(' ')'  (57)
	outf_rule : OUTF . '(' cadena ')'  (58)
	outf_rule : OUTF . '(' sentencias ')'  (59)

	'('  shift 47
	.  error


state 7
	declaracion_subtipo : TYPEDEF . ID_simple ASIGNACION tipo '{' CTE_con_sig ',' CTE_con_sig '}'  (23)
	declaracion_subtipo : TYPEDEF . ID_simple ASIGNACION tipo CTE_con_sig ',' CTE_con_sig '}'  (24)
	declaracion_subtipo : TYPEDEF . ID_simple ASIGNACION tipo '{' CTE_con_sig ',' CTE_con_sig  (25)
	declaracion_subtipo : TYPEDEF . ID_simple ASIGNACION tipo CTE_con_sig ',' CTE_con_sig  (26)
	declaracion_subtipo : TYPEDEF . TRIPLE '<' tipo '>' ID_simple  (27)
	declaracion_subtipo : TYPEDEF . ID_simple ASIGNACION tipo '{' ',' CTE_con_sig '}'  (28)
	declaracion_subtipo : TYPEDEF . ID_simple ASIGNACION tipo '{' CTE_con_sig '}'  (29)
	declaracion_subtipo : TYPEDEF . ID_simple ASIGNACION tipo '{' CTE_con_sig ',' '}'  (30)
	declaracion_subtipo : TYPEDEF . ID_simple ASIGNACION tipo '{' '}'  (31)
	declaracion_subtipo : TYPEDEF . ASIGNACION tipo '{' CTE_con_sig ',' CTE_con_sig '}'  (32)
	declaracion_subtipo : TYPEDEF . ID_simple ASIGNACION '{' CTE_con_sig ',' CTE_con_sig '}'  (33)
	declaracion_subtipo : TYPEDEF . '<' tipo '>' ID_simple  (34)
	declaracion_subtipo : TYPEDEF . TRIPLE tipo '>' ID_simple  (35)
	declaracion_subtipo : TYPEDEF . TRIPLE '<' tipo ID_simple  (36)
	declaracion_subtipo : TYPEDEF . TRIPLE tipo ID_simple  (37)
	declaracion_subtipo : TYPEDEF . TRIPLE '<' tipo '>' error  (38)

	ID  shift 2
	TRIPLE  shift 48
	ASIGNACION  shift 49
	'<'  shift 50
	.  error

	ID_simple  goto 51


state 8
	retorno : RET . '(' expresion_arit ')'  (48)

	'('  shift 52
	.  error


state 9
	sentencia_WHILE : WHILE . condicion bloque_unidad  (141)
	sentencia_WHILE : WHILE . condicion error  (142)

	error  shift 34
	CTE  shift 35
	ID  shift 2
	ERROR  shift 36
	'('  shift 37
	'-'  shift 38
	.  error

	ID_simple  goto 39
	CTE_con_sig  goto 40
	expresion_arit  goto 41
	variable_simple  goto 42
	invocacion  goto 43
	termino  goto 44
	factor  goto 45
	condicion  goto 53


state 10
	sentencia_goto : GOTO . ETIQUETA  (143)
	sentencia_goto : GOTO . error  (144)

	error  shift 54
	ETIQUETA  shift 55
	.  error


state 11
	sentencia_ejecutable : ETIQUETA .  (53)

	.  reduce 53


state 12
	tipo_primitivo : INTEGER .  (21)

	.  reduce 21


state 13
	tipo_primitivo : DOUBLE .  (22)

	.  reduce 22


state 14
	tipo : ID_simple .  (19)
	variable_simple : ID_simple .  (90)

	FUN  reduce 19
	ID  reduce 19
	ASIGNACION  reduce 90
	'{'  reduce 90


state 15
	programa : BEGIN sentencias . END  (3)
	sentencias : sentencias . sentencia  (7)

	IF  shift 5
	END  shift 56
	OUTF  shift 6
	TYPEDEF  shift 7
	RET  shift 8
	ID  shift 2
	WHILE  shift 9
	GOTO  shift 10
	ETIQUETA  shift 11
	INTEGER  shift 12
	DOUBLE  shift 13
	.  error

	ID_simple  goto 14
	sentencia  goto 57
	sentencia_declarativa  goto 17
	sentencia_ejecutable  goto 18
	declaracion_variable  goto 19
	declaracion_funciones  goto 20
	declaracion_subtipo  goto 21
	tipo  goto 22
	tipo_primitivo  goto 23
	encabezado_funcion  goto 24
	retorno  goto 25
	asignacion  goto 26
	sentencia_IF  goto 27
	sentencia_WHILE  goto 28
	sentencia_goto  goto 29
	outf_rule  goto 30
	variable_simple  goto 31


state 16
	sentencias : sentencia .  (8)

	.  reduce 8


state 17
	sentencia : sentencia_declarativa .  (9)

	.  reduce 9


state 18
	sentencia : sentencia_ejecutable . ';'  (10)
	sentencia : sentencia_ejecutable .  (11)

	';'  shift 58
	$end  reduce 11
	IF  reduce 11
	END  reduce 11
	OUTF  reduce 11
	TYPEDEF  reduce 11
	RET  reduce 11
	ID  reduce 11
	WHILE  reduce 11
	GOTO  reduce 11
	ETIQUETA  reduce 11
	INTEGER  reduce 11
	DOUBLE  reduce 11
	')'  reduce 11


state 19
	sentencia_declarativa : declaracion_variable .  (12)

	.  reduce 12


state 20
	sentencia_declarativa : declaracion_funciones . ';'  (13)
	sentencia_declarativa : declaracion_funciones .  (15)

	';'  shift 59
	$end  reduce 15
	IF  reduce 15
	END  reduce 15
	OUTF  reduce 15
	TYPEDEF  reduce 15
	RET  reduce 15
	ID  reduce 15
	WHILE  reduce 15
	GOTO  reduce 15
	ETIQUETA  reduce 15
	INTEGER  reduce 15
	DOUBLE  reduce 15
	')'  reduce 15


state 21
	sentencia_declarativa : declaracion_subtipo . ';'  (14)
	sentencia_declarativa : declaracion_subtipo .  (16)

	';'  shift 60
	$end  reduce 16
	IF  reduce 16
	END  reduce 16
	OUTF  reduce 16
	TYPEDEF  reduce 16
	RET  reduce 16
	ID  reduce 16
	WHILE  reduce 16
	GOTO  reduce 16
	ETIQUETA  reduce 16
	INTEGER  reduce 16
	DOUBLE  reduce 16
	')'  reduce 16


state 22
	declaracion_variable : tipo . variables ';'  (17)
	declaracion_variable : tipo . variables error  (18)
	encabezado_funcion : tipo . FUN ID  (40)
	encabezado_funcion : tipo . FUN  (41)

	FUN  shift 61
	ID  shift 2
	.  error

	ID_simple  goto 62
	variables  goto 63
	variable_simple  goto 64


state 23
	tipo : tipo_primitivo .  (20)

	.  reduce 20


state 24
	declaracion_funciones : encabezado_funcion . parametros_parentesis BEGIN cuerpo_funcion END  (39)

	'('  shift 65
	.  error

	parametros_parentesis  goto 66


state 25
	sentencia_ejecutable : retorno .  (55)

	.  reduce 55


state 26
	sentencia_ejecutable : asignacion .  (49)

	.  reduce 49


state 27
	sentencia_ejecutable : sentencia_IF .  (50)

	.  reduce 50


state 28
	sentencia_ejecutable : sentencia_WHILE .  (51)

	.  reduce 51


state 29
	sentencia_ejecutable : sentencia_goto .  (52)

	.  reduce 52


state 30
	sentencia_ejecutable : outf_rule .  (54)

	.  reduce 54


state 31
	asignacion : variable_simple . ASIGNACION expresion_arit  (60)
	asignacion : variable_simple . '{' CTE '}' ASIGNACION expresion_arit  (61)

	ASIGNACION  shift 67
	'{'  shift 68
	.  error


state 32
	programa : ID_simple BEGIN . sentencias END  (1)
	programa : ID_simple BEGIN . END  (2)
	programa : ID_simple BEGIN . sentencias  (4)

	IF  shift 5
	END  shift 69
	OUTF  shift 6
	TYPEDEF  shift 7
	RET  shift 8
	ID  shift 2
	WHILE  shift 9
	GOTO  shift 10
	ETIQUETA  shift 11
	INTEGER  shift 12
	DOUBLE  shift 13
	.  error

	ID_simple  goto 14
	sentencias  goto 70
	sentencia  goto 16
	sentencia_declarativa  goto 17
	sentencia_ejecutable  goto 18
	declaracion_variable  goto 19
	declaracion_funciones  goto 20
	declaracion_subtipo  goto 21
	tipo  goto 22
	tipo_primitivo  goto 23
	encabezado_funcion  goto 24
	retorno  goto 25
	asignacion  goto 26
	sentencia_IF  goto 27
	sentencia_WHILE  goto 28
	sentencia_goto  goto 29
	outf_rule  goto 30
	variable_simple  goto 31


state 33
	programa : ID_simple sentencias . END  (5)
	programa : ID_simple sentencias .  (6)
	sentencias : sentencias . sentencia  (7)

	IF  shift 5
	END  shift 71
	OUTF  shift 6
	TYPEDEF  shift 7
	RET  shift 8
	ID  shift 2
	WHILE  shift 9
	GOTO  shift 10
	ETIQUETA  shift 11
	INTEGER  shift 12
	DOUBLE  shift 13
	$end  reduce 6

	ID_simple  goto 14
	sentencia  goto 57
	sentencia_declarativa  goto 17
	sentencia_ejecutable  goto 18
	declaracion_variable  goto 19
	declaracion_funciones  goto 20
	declaracion_subtipo  goto 21
	tipo  goto 22
	tipo_primitivo  goto 23
	encabezado_funcion  goto 24
	retorno  goto 25
	asignacion  goto 26
	sentencia_IF  goto 27
	sentencia_WHILE  goto 28
	sentencia_goto  goto 29
	outf_rule  goto 30
	variable_simple  goto 31


state 34
	expresion_arit : error . '+' error  (71)
	expresion_arit : error . '-' error  (72)
	expresion_arit : error . termino  (75)
	termino : error . '*' error  (79)
	termino : error . '/' error  (80)

	error  shift 72
	CTE  shift 35
	ID  shift 2
	ERROR  shift 36
	'+'  shift 73
	'-'  shift 74
	'*'  shift 75
	'/'  shift 76
	.  error

	ID_simple  goto 39
	CTE_con_sig  goto 40
	variable_simple  goto 42
	invocacion  goto 43
	termino  goto 77
	factor  goto 45


state 35
	CTE_con_sig : CTE .  (92)

	.  reduce 92


state 36
	CTE_con_sig : ERROR .  (94)

	.  reduce 94


state 37
	condicion : '(' . '(' list_expre ')' comparador '(' list_expre ')' ')'  (107)
	condicion : '(' . list_expre ')' comparador '(' list_expre ')' ')'  (108)
	condicion : '(' . '(' list_expre ')' comparador '(' list_expre ')'  (109)
	condicion : '(' . list_expre ')' comparador '(' list_expre ')'  (110)
	condicion : '(' . expresion_arit comparador expresion_arit ')'  (111)
	condicion : '(' . expresion_arit comparador expresion_arit  (113)
	condicion : '(' . '(' list_expre ')' '(' list_expre ')' ')'  (115)
	condicion : '(' . error ')'  (116)
	condicion : '(' . '(' list_expre comparador '(' list_expre ')' ')'  (117)
	condicion : '(' . '(' list_expre ')' comparador list_expre ')' ')'  (118)

	error  shift 78
	CTE  shift 35
	ID  shift 2
	ERROR  shift 36
	'('  shift 79
	'-'  shift 38
	.  error

	ID_simple  goto 39
	CTE_con_sig  goto 40
	expresion_arit  goto 80
	variable_simple  goto 42
	invocacion  goto 43
	list_expre  goto 81
	termino  goto 44
	factor  goto 45


state 38
	CTE_con_sig : '-' . CTE  (93)
	CTE_con_sig : '-' . ERROR  (95)

	CTE  shift 82
	ERROR  shift 83
	.  error


state 39
	invocacion : ID_simple . '(' expresion_arit ')'  (62)
	invocacion : ID_simple . '(' tipo_primitivo '(' expresion_arit ')' ')'  (63)
	invocacion : ID_simple . '(' ')'  (64)
	invocacion : ID_simple . '(' error ')'  (65)
	variable_simple : ID_simple .  (90)

	'('  shift 84
	$end  reduce 90
	error  reduce 90
	IF  reduce 90
	THEN  reduce 90
	ELSE  reduce 90
	BEGIN  reduce 90
	END  reduce 90
	END_IF  reduce 90
	OUTF  reduce 90
	TYPEDEF  reduce 90
	RET  reduce 90
	ID  reduce 90
	WHILE  reduce 90
	GOTO  reduce 90
	ETIQUETA  reduce 90
	MAYORIGUAL  reduce 90
	MENORIGUAL  reduce 90
	DISTINTO  reduce 90
	INTEGER  reduce 90
	DOUBLE  reduce 90
	';'  reduce 90
	'{'  reduce 90
	','  reduce 90
	'<'  reduce 90
	'>'  reduce 90
	')'  reduce 90
	'+'  reduce 90
	'-'  reduce 90
	'*'  reduce 90
	'/'  reduce 90
	'='  reduce 90


state 40
	factor : CTE_con_sig .  (84)

	.  reduce 84


state 41
	expresion_arit : expresion_arit . '+' termino  (68)
	expresion_arit : expresion_arit . '-' termino  (69)
	expresion_arit : expresion_arit . '+' error  (73)
	expresion_arit : expresion_arit . '-' error  (74)
	condicion : expresion_arit . comparador expresion_arit ')'  (112)
	condicion : expresion_arit . comparador expresion_arit  (114)

	MAYORIGUAL  shift 85
	MENORIGUAL  shift 86
	DISTINTO  shift 87
	'<'  shift 88
	'>'  shift 89
	'+'  shift 90
	'-'  shift 91
	'='  shift 92
	.  error

	comparador  goto 93


state 42
	factor : variable_simple .  (83)
	factor : variable_simple . '{' CTE '}'  (86)

	'{'  shift 94
	$end  reduce 83
	error  reduce 83
	IF  reduce 83
	THEN  reduce 83
	ELSE  reduce 83
	BEGIN  reduce 83
	END  reduce 83
	END_IF  reduce 83
	OUTF  reduce 83
	TYPEDEF  reduce 83
	RET  reduce 83
	ID  reduce 83
	WHILE  reduce 83
	GOTO  reduce 83
	ETIQUETA  reduce 83
	MAYORIGUAL  reduce 83
	MENORIGUAL  reduce 83
	DISTINTO  reduce 83
	INTEGER  reduce 83
	DOUBLE  reduce 83
	';'  reduce 83
	','  reduce 83
	'<'  reduce 83
	'>'  reduce 83
	')'  reduce 83
	'+'  reduce 83
	'-'  reduce 83
	'*'  reduce 83
	'/'  reduce 83
	'='  reduce 83


state 43
	factor : invocacion .  (85)

	.  reduce 85


state 44
	expresion_arit : termino .  (70)
	termino : termino . '*' factor  (76)
	termino : termino . '/' factor  (77)
	termino : termino . '*' error  (81)
	termino : termino . '/' error  (82)

	'*'  shift 95
	'/'  shift 96
	$end  reduce 70
	error  reduce 70
	IF  reduce 70
	THEN  reduce 70
	ELSE  reduce 70
	BEGIN  reduce 70
	END  reduce 70
	END_IF  reduce 70
	OUTF  reduce 70
	TYPEDEF  reduce 70
	RET  reduce 70
	ID  reduce 70
	WHILE  reduce 70
	GOTO  reduce 70
	ETIQUETA  reduce 70
	MAYORIGUAL  reduce 70
	MENORIGUAL  reduce 70
	DISTINTO  reduce 70
	INTEGER  reduce 70
	DOUBLE  reduce 70
	';'  reduce 70
	','  reduce 70
	'<'  reduce 70
	'>'  reduce 70
	')'  reduce 70
	'+'  reduce 70
	'-'  reduce 70
	'='  reduce 70


state 45
	termino : factor .  (78)

	.  reduce 78


state 46
	sentencia_IF : IF condicion . THEN bloque_unidad ';' bloque_else ';' END_IF  (96)
	sentencia_IF : IF condicion . THEN bloque_unidad ';' END_IF  (97)
	sentencia_IF : IF condicion . THEN bloque_else ';' END_IF  (98)
	sentencia_IF : IF condicion . THEN END_IF  (99)
	sentencia_IF : IF condicion . THEN bloque_unidad ';' ELSE END_IF  (100)
	sentencia_IF : IF condicion . THEN bloque_unidad bloque_else ';' END_IF  (101)
	sentencia_IF : IF condicion . THEN bloque_unidad END_IF  (102)
	sentencia_IF : IF condicion . THEN bloque_unidad ';' bloque_else END_IF  (103)
	sentencia_IF : IF condicion . THEN bloque_unidad bloque_else END_IF  (104)
	sentencia_IF : IF condicion . THEN bloque_unidad ';' error  (105)
	sentencia_IF : IF condicion . THEN bloque_unidad ';' bloque_else ';' error  (106)

	THEN  shift 97
	.  error


state 47
	outf_rule : OUTF '(' . expresion_arit ')'  (56)
	outf_rule : OUTF '(' . ')'  (57)
	outf_rule : OUTF '(' . cadena ')'  (58)
	outf_rule : OUTF '(' . sentencias ')'  (59)

	error  shift 34
	IF  shift 5
	OUTF  shift 6
	TYPEDEF  shift 7
	RET  shift 8
	CTE  shift 35
	ID  shift 2
	CADENAMULTILINEA  shift 98
	WHILE  shift 9
	GOTO  shift 10
	ETIQUETA  shift 11
	INTEGER  shift 12
	DOUBLE  shift 13
	ERROR  shift 36
	')'  shift 99
	'-'  shift 38
	.  error

	ID_simple  goto 100
	sentencias  goto 101
	sentencia  goto 16
	sentencia_declarativa  goto 17
	sentencia_ejecutable  goto 18
	declaracion_variable  goto 19
	declaracion_funciones  goto 20
	declaracion_subtipo  goto 21
	tipo  goto 22
	tipo_primitivo  goto 23
	CTE_con_sig  goto 40
	encabezado_funcion  goto 24
	retorno  goto 25
	expresion_arit  goto 102
	asignacion  goto 26
	sentencia_IF  goto 27
	sentencia_WHILE  goto 28
	sentencia_goto  goto 29
	outf_rule  goto 30
	cadena  goto 103
	variable_simple  goto 104
	invocacion  goto 43
	termino  goto 44
	factor  goto 45


state 48
	declaracion_subtipo : TYPEDEF TRIPLE . '<' tipo '>' ID_simple  (27)
	declaracion_subtipo : TYPEDEF TRIPLE . tipo '>' ID_simple  (35)
	declaracion_subtipo : TYPEDEF TRIPLE . '<' tipo ID_simple  (36)
	declaracion_subtipo : TYPEDEF TRIPLE . tipo ID_simple  (37)
	declaracion_subtipo : TYPEDEF TRIPLE . '<' tipo '>' error  (38)

	ID  shift 2
	INTEGER  shift 12
	DOUBLE  shift 13
	'<'  shift 105
	.  error

	ID_simple  goto 106
	tipo  goto 107
	tipo_primitivo  goto 23


state 49
	declaracion_subtipo : TYPEDEF ASIGNACION . tipo '{' CTE_con_sig ',' CTE_con_sig '}'  (32)

	ID  shift 2
	INTEGER  shift 12
	DOUBLE  shift 13
	.  error

	ID_simple  goto 106
	tipo  goto 108
	tipo_primitivo  goto 23


state 50
	declaracion_subtipo : TYPEDEF '<' . tipo '>' ID_simple  (34)

	ID  shift 2
	INTEGER  shift 12
	DOUBLE  shift 13
	.  error

	ID_simple  goto 106
	tipo  goto 109
	tipo_primitivo  goto 23


state 51
	declaracion_subtipo : TYPEDEF ID_simple . ASIGNACION tipo '{' CTE_con_sig ',' CTE_con_sig '}'  (23)
	declaracion_subtipo : TYPEDEF ID_simple . ASIGNACION tipo CTE_con_sig ',' CTE_con_sig '}'  (24)
	declaracion_subtipo : TYPEDEF ID_simple . ASIGNACION tipo '{' CTE_con_sig ',' CTE_con_sig  (25)
	declaracion_subtipo : TYPEDEF ID_simple . ASIGNACION tipo CTE_con_sig ',' CTE_con_sig  (26)
	declaracion_subtipo : TYPEDEF ID_simple . ASIGNACION tipo '{' ',' CTE_con_sig '}'  (28)
	declaracion_subtipo : TYPEDEF ID_simple . ASIGNACION tipo '{' CTE_con_sig '}'  (29)
	declaracion_subtipo : TYPEDEF ID_simple . ASIGNACION tipo '{' CTE_con_sig ',' '}'  (30)
	declaracion_subtipo : TYPEDEF ID_simple . ASIGNACION tipo '{' '}'  (31)
	declaracion_subtipo : TYPEDEF ID_simple . ASIGNACION '{' CTE_con_sig ',' CTE_con_sig '}'  (33)

	ASIGNACION  shift 110
	.  error


state 52
	retorno : RET '(' . expresion_arit ')'  (48)

	error  shift 34
	CTE  shift 35
	ID  shift 2
	ERROR  shift 36
	'-'  shift 38
	.  error

	ID_simple  goto 39
	CTE_con_sig  goto 40
	expresion_arit  goto 111
	variable_simple  goto 42
	invocacion  goto 43
	termino  goto 44
	factor  goto 45


state 53
	sentencia_WHILE : WHILE condicion . bloque_unidad  (141)
	sentencia_WHILE : WHILE condicion . error  (142)

	error  shift 112
	IF  shift 5
	BEGIN  shift 113
	OUTF  shift 6
	RET  shift 8
	ID  shift 2
	WHILE  shift 9
	GOTO  shift 10
	ETIQUETA  shift 11
	.  error

	ID_simple  goto 62
	sentencia_ejecutable  goto 114
	retorno  goto 25
	asignacion  goto 26
	sentencia_IF  goto 27
	sentencia_WHILE  goto 28
	sentencia_goto  goto 29
	outf_rule  goto 30
	variable_simple  goto 31
	bloque_unidad  goto 115
	bloque_sentencia_simple  goto 116
	bloque_unidad_simple  goto 117
	bloque_unidad_multiple  goto 118


state 54
	sentencia_goto : GOTO error .  (144)

	.  reduce 144


state 55
	sentencia_goto : GOTO ETIQUETA .  (143)

	.  reduce 143


state 56
	programa : BEGIN sentencias END .  (3)

	.  reduce 3


state 57
	sentencias : sentencias sentencia .  (7)

	.  reduce 7


state 58
	sentencia : sentencia_ejecutable ';' .  (10)

	.  reduce 10


state 59
	sentencia_declarativa : declaracion_funciones ';' .  (13)

	.  reduce 13


state 60
	sentencia_declarativa : declaracion_subtipo ';' .  (14)

	.  reduce 14


state 61
	encabezado_funcion : tipo FUN . ID  (40)
	encabezado_funcion : tipo FUN .  (41)

	ID  shift 119
	'('  reduce 41


state 62
	variable_simple : ID_simple .  (90)

	.  reduce 90


state 63
	declaracion_variable : tipo variables . ';'  (17)
	declaracion_variable : tipo variables . error  (18)
	variables : variables . ',' variable_simple  (87)
	variables : variables . variable_simple  (88)

	error  shift 120
	ID  shift 2
	';'  shift 121
	','  shift 122
	.  error

	ID_simple  goto 62
	variable_simple  goto 123


state 64
	variables : variable_simple .  (89)

	.  reduce 89
